<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/dim_size_8"
    >
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:id="@+id/mtv_title_about_us_name"
        android:text="@string/title_about_us_name"
        android:background="@color/btn_bp_four"
        android:textAlignment="center"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:id="@+id/mtv_title_about_us_email"
        android:text="@string/title_about_us_email"
        android:textAlignment="center"
        style="@style/input_text.item.title"
        android:background="@color/btn_bp_four"
        app:layout_constraintStart_toStartOf="@id/mtv_title_about_us_name"
        app:layout_constraintEnd_toEndOf="@id/mtv_title_about_us_name"
        app:layout_constraintTop_toBottomOf="@id/mtv_title_about_us_name"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:id="@+id/mtv_title_about_us_author"
        android:text="@string/title_about_us_author"
        android:textAlignment="center"
        style="@style/input_text.item.title"
        android:background="@color/btn_bp_four"
        app:layout_constraintStart_toStartOf="@id/mtv_title_about_us_name"
        app:layout_constraintEnd_toEndOf="@id/mtv_title_about_us_name"
        app:layout_constraintTop_toBottomOf="@id/mtv_title_about_us_email"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:id="@+id/mtv_title_about_us_version"
        android:text="@string/title_about_us_version"
        android:textAlignment="center"
        style="@style/input_text.item.title"
        android:background="@color/btn_bp_four"
        app:layout_constraintStart_toStartOf="@id/mtv_title_about_us_name"
        app:layout_constraintEnd_toEndOf="@id/mtv_title_about_us_name"
        app:layout_constraintTop_toBottomOf="@id/mtv_title_about_us_author"
        />
</androidx.constraintlayout.widget.ConstraintLayout>