<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.transfer.BottomSheetTransferConfirmation">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_no_part"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_16"
        android:text="@string/title_bottom_transfer_no_part"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_no_part"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item"
        tools:text="101408"
        android:layout_marginEnd="@dimen/dim_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_no_part"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_unique_code"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_8"
        android:text="@string/title_bottom_transfer_unique_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_no_part"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_unique_code"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item"
        tools:text="AJ2345"
        app:layout_constraintEnd_toEndOf="@id/tv_text_no_part"
        app:layout_constraintTop_toTopOf="@id/tv_title_unique_code"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_order"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_8"
        android:text="@string/title_bottom_transfer_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_unique_code"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_order"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item"
        tools:text="PP2345"
        app:layout_constraintEnd_toEndOf="@id/tv_text_unique_code"
        app:layout_constraintTop_toTopOf="@id/tv_title_order"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_batch"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_8"
        android:text="@string/title_tv_transfer_batch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_order"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_batch"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item"
        tools:text="10140874"
        app:layout_constraintEnd_toEndOf="@id/tv_text_order"
        app:layout_constraintTop_toTopOf="@id/tv_title_batch"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_pieces"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item.title"
        android:layout_margin="@dimen/dim_size_8"
        android:text="@string/title_tv_transfer_pieces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_batch"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_pieces"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        style="@style/input_text.item"
        tools:text="300"
        app:layout_constraintEnd_toEndOf="@id/tv_text_batch"
        app:layout_constraintTop_toTopOf="@id/tv_title_pieces"
        />
    <View
        android:id="@+id/vw_divider"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="@dimen/dim_size_1"
        android:layout_margin="@dimen/dim_size_5"
        android:background="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_pieces" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_team_worker"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_8"
        android:hint="@string/title_bottom_transfer_team_work"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_team_worker"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_perforadora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_8"
        android:hint="@string/title_bottom_transfer_perforadora"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_team_worker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_perforadora"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_standard_pack"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_8"
        android:hint="@string/title_bottom_transfer_standard_pack"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_perforadora">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_standard_pack"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clean"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:text="@string/text_general_app_clean"
        android:layout_margin="@dimen/dim_size_16"
        style="@style/button_text"
        app:layout_constraintStart_toStartOf="@+id/til_standard_pack"
        app:layout_constraintTop_toBottomOf="@id/til_standard_pack"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:text="@string/text_general_app_save"
        android:layout_margin="@dimen/dim_size_16"
        style="@style/button_text"
        app:layout_constraintEnd_toEndOf="@+id/til_standard_pack"
        app:layout_constraintTop_toBottomOf="@id/til_standard_pack"
        />
</androidx.constraintlayout.widget.ConstraintLayout>