<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.transfer.MainMenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_in"
        style="@style/button_text"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_transfer"
        app:layout_constraintEnd_toEndOf="@id/btn_transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_title_in"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintVertical_bias="0.380"
        android:visibility="invisible"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_out"
        style="@style/button_text"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintTop_toBottomOf="@id/btn_in"
        app:layout_constraintStart_toStartOf="@id/btn_transfer"
        app:layout_constraintEnd_toEndOf="@id/btn_transfer"
        android:layout_margin="@dimen/dim_size_5"
        android:text="@string/btn_title_out"
        android:visibility="invisible"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_text"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintTop_toBottomOf="@id/btn_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dim_size_5"
        android:text="@string/btn_title_transfer"
        />




</androidx.constraintlayout.widget.ConstraintLayout>