<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".PrinterConfigFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_config_printer"
        android:text="@string/config_printer"
        style="@style/input_text"
        android:layout_width="@dimen/dim_size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ip_printer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_8"
        android:hint="@string/hint_printer_ip"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_config_printer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_ip_printer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_port_printer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_size_8"
        android:hint="@string/hint_printer_port"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/til_ip_printer"
        app:layout_constraintStart_toStartOf="@id/til_ip_printer"
        app:layout_constraintTop_toBottomOf="@id/til_ip_printer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_port_printer"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_test_printer"
        android:text="Impresion de prueba"
        style="@style/Button.Primary"
        android:layout_margin="@dimen/dim_size_8"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintTop_toBottomOf="@id/til_port_printer"
        app:layout_constraintStart_toStartOf="@id/til_port_printer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_on_back_press_cancel"
        style="@style/Button.Primary"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintTop_toBottomOf="@id/btn_test_printer"
        app:layout_constraintStart_toStartOf="@id/btn_test_printer"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_general_app_save"
        style="@style/Button.Primary"
        android:padding="@dimen/dim_size_16"
        app:layout_constraintTop_toBottomOf="@id/btn_test_printer"
        app:layout_constraintEnd_toEndOf="@id/btn_test_printer"
        />
</androidx.constraintlayout.widget.ConstraintLayout>